--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.jpa.open-in-view = false
 #Logging
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
+
+spring.thymeleaf.cache = false
+spring.thymeleaf.prefix = file:src/main/resources/templates/
+spring.web.resources.static-locations=[classpath:META-INF/resources/, file:src/main/resources/, file:src/main/resources/static/, file:src/main/resources/static/assets/, classpath:/public/]
+spring.web.resources.cache.period=0
