--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,11 @@ spring.jpa.generate-ddl = false
 spring.jpa.show-sql = false
 spring.jpa.open-in-view = false
 
+# Cloudinary
+application.uploader.cloud-name=toanphat
+application.uploader.api-key=113674834486315
+application.uploader.api-secret=2K-7Ospoz3OZYPUSpNb7IDL2cPE
+
 #Logging
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
